...
let API_KEY = "42f4616237f399cf57daf96bd20ad84c528420ac"

let UNITS:[String:[String]] = [
    "pm25":["PM2.5", "Pył zawieszony"],
    "pm10":["PM10", "Pył zawieszony"],
    "o3":["O3", "Ozon"],
    "no2":["NO2", "Dwutlenek azotu"],
    "so2":["SO2", "Dwutlenek siarki"],
    "co":["CO", "Tlenek węgla"],
    "t":["Temp", "Temperatura"],
    "w":["Wiatr", "Wiatr"],
    "r":["Deszcz", "Deszcz"],
    "h":["Wilgotność", "Wilgotność"],
...
    ["3399","Marszałkowska, Warszawa, Mazowieckie"],
    ["9037","Brzozowa, Otwock, Mazowieckie"],
    ["3402","Aleja Krasińskiego, Kraków, Małopolska"],
    ["3398","Komunikacyjna, Warszawa, Mazowieckie"],
    ["3403","Nowa Huta, Kraków, Małopolska"],
    ["8691","Kraków, ul. Złoty Róg, Małopolska"],
    ["8689","Kraków-ul. Dietla, Małopolska"],
    ["3404","Nowy Sącz, Małopolska"],
    ["3405","Zakopane, Małopolska"],
    ["3406","Trzebinia, Małopolska"],
    ["3407","Kurdwanów, Kraków, Małopolska"],
    ["3408","Olkusz, Małopolska"],
    ["9040","Nowy Targ, Pl. Słowackiego, Małopolska"],
...
